Closed
Bug 822700
Opened 13 years ago
Closed 13 years ago
[DMD] DMD-enabled builds running with DMD turned off crash when asked to dump memory reports
Categories
(Core :: DMD, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: kats, Assigned: n.nethercote)
References
Details
Attachments
(2 files)
11.15 KB,
text/plain
|
Details | |
1.07 KB,
patch
|
justin.lebar+bug
:
review+
justin.lebar+bug
:
approval-mozilla-aurora+
justin.lebar+bug
:
approval-mozilla-b2g18+
|
Details | Diff | Splinter Review |
I had a fennec build with --enable-dmd running without the DMD=1 environment variable. This meant that DMD was disabled (gDMDEnvVar was 0x0 and gIsDMDRunning was false). When I called nsIMemoryInfoDumper.DumpReportsToFile, it resulted in a crash. Backtrace is attached; it was segfaulting on JS_ASSERT(table) in Hashtable.h because "this" was 0x0 and "table" was garbage.
![]() |
Assignee | |
Updated•13 years ago
|
Assignee: nobody → n.nethercote
![]() |
Assignee | |
Comment 2•13 years ago
|
||
It'd be nice to have some more comprehensive DMD tests. Hmm.
Comment 3•13 years ago
|
||
Comment on attachment 693643 [details] [diff] [review]
When DMD is disabled its SizeOf() function shouldn't try to measure non-existent structures.
Could you add a comment indicating that Sizes has a default zeroing constructor so you don't give the next person to read this a heart attack? :)
r+a=me
Attachment #693643 -
Flags: review?(justin.lebar+bug)
Attachment #693643 -
Flags: review+
Attachment #693643 -
Flags: approval-mozilla-b2g18+
Attachment #693643 -
Flags: approval-mozilla-aurora+
![]() |
Assignee | |
Comment 4•13 years ago
|
||
> Could you add a comment indicating that Sizes has a default zeroing
> constructor so you don't give the next person to read this a heart attack?
I added Sizes::Clear() and called it from both the constructor and SizeOf(), to avoid the need for a comment.
https://hg.mozilla.org/integration/mozilla-inbound/rev/a428738147c7
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment 6•13 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/8e0337f05bbf
https://hg.mozilla.org/releases/mozilla-b2g18/rev/8ff7c575a38e
status-firefox19:
--- → fixed
status-firefox20:
--- → fixed
Updated•13 years ago
|
status-b2g18:
--- → fixed
![]() |
Assignee | |
Updated•13 years ago
|
Component: General → DMD
You need to log in
before you can comment on or make changes to this bug.
Description
•