Bug 822700 - When DMD is disabled its SizeOf() function shouldn't try to measure non-existent structures.  r=jlebar.

--HG--
extra : rebase_source : 21066e5173dbc7e4a6c7615f1b355989bf046082